Scrolling underground, but weird stuff happening with plant

--- a/Arboreal.html
+++ b/Arboreal.html
@@ -1,18 +1,24 @@
 <html>
 <head>
 <script src='scripts/lib/jquery-3.1.1.min.js'></script>
+<script src='scripts/lib/jquery.stretch.js'></script>
 <script src='scripts/lib/cytoscape.min.js'></script>
 <script src='scripts/lib/rita-full.js'></script>
 <script src='scripts/lib/p5.min.js'></script>
 <link rel="stylesheet" type="text/css" href="style/styles.css">
 </head>
 <body>
-<input type="text" id="txtInput" style="width:50%">
+<!--<input type="text" id="txtInput" style="width:50%">
 <button id="generate">Generate</button>
 <button id="generateFromCorpus">Generate From Corpus</button>
+
 <div id="generated"></div>
-<div id="tree"></div>
+-->
 <div id="sentence"></div>
+<div id="tree"></div>
+<div id="ground"></div>
+<div id="underground"></div>
+
 
 <script src='scripts/generate.js'></script>
 </body>
