Minimum viable product for show.

--- a/Arboreal.html
+++ b/Arboreal.html
@@ -18,6 +18,7 @@
 <div id="tree"></div>
 <div id="ground"></div>
 <div id="underground"></div>
+<div id="outro"></div>
 
 
 <script src='scripts/generate.js'></script>
