--- a/Arboreal.html
+++ b/Arboreal.html
@@ -3,6 +3,8 @@
 <script src='scripts/lib/jquery-3.1.1.min.js'></script>
 <script src='scripts/lib/jquery.stretch.js'></script>
 <script src='scripts/lib/cytoscape.min.js'></script>
+<script src="scripts/lib/dagre.js"></script>
+<script src="scripts/lib/cytoscape-dagre.js"></script>
 <script src='scripts/lib/rita-full.js'></script>
 <script src='scripts/lib/p5.min.js'></script>
 <link rel="stylesheet" type="text/css" href="style/styles.css">
@@ -19,6 +21,8 @@
 <div id="ground"></div>
 <div id="underground"></div>
 <div id="outro"></div>
+<div id="sun"></div>
+<div id="overSun"></div>
 
 
 <script src='scripts/generate.js'></script>
