ready for show!

--- a/Arboreal.html
+++ b/Arboreal.html
@@ -17,7 +17,11 @@
 <div id="generated"></div>
 -->
 <div id="sentence"></div>
-<div id="tree"></div>
+<div id="tree0" class="tree"></div>
+<div id="tree1" class="tree"></div>
+<div id="tree2" class="tree"></div>
+<div id="tree3" class="tree"></div>
+<div id="tree4" class="tree"></div>
 <div id="ground"></div>
 <div id="underground"></div>
 <div id="outro"></div>
